# Resume_update

./: .env.example  Dockerfile  README.md  pyproject.toml  test_selenium.py  update_hh.py  update_resume.py
src/: client.py  exceptions.py  selenium_helper.py  settings.py  update_resume.py
